--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   width: 100%;
   height: 100vh;
   background: #0f0f0f;
-  z-index: 1;
+  /* z-index: 1; */
   opacity: 0;
 }
 
@@ -153,9 +153,15 @@ body {
   color: white;
 }
 
+@media (max-width: 1450px) {
+  .hero-title .letter {
+    font-size: 50px !important;
+  }
+}
+
 @media (max-width: 900px) {
   .hero-title .letter {
-    font-size: 24px !important;
+    font-size: 25px !important;
   }
 }
 
@@ -200,7 +206,8 @@ body {
 .about-link a:hover {
   text-decoration: none;
   color: white;
-  background: black;
+  background: orange;
+  cursor: pointer;
 }
 
 .project-section {
@@ -251,6 +258,8 @@ body {
   font-family: "Times New Roman";
   text-transform: uppercase;
 }
+
+
 
 .social-media h3 {
   font-family: Helvetica;
