--- a/style.css
+++ b/style.css
@@ -210,6 +210,25 @@ body {
   cursor: pointer;
 }
 
+.pdf-link {
+  margin: 50px 0;
+}
+
+.pdf-link a {
+  color: white;
+  padding: 18px 36px;
+  border: 1px solid white;
+  font-size: 12px;
+  letter-spacing: 4px;
+}
+
+.pdf-link a:hover {
+  text-decoration: none;
+  color: white;
+  background: orange;
+  cursor: pointer;
+}
+
 .project-section {
   background: #0f0f0f;
   padding-top: 120px;
